--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <body>
     <div class="container">
-        <img src="image-qr-code.png" alt="qrimage">
+        <img src="https://d.top4top.io/p_2212ettif2.png" alt="qrimage">
         <p class="writeup">
                 Improve your front-end skills by building projects
         </p>
