--- a/index.html
+++ b/index.html
@@ -1,60 +1,60 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <link href="https://fonts.googleapis.com/css?family=Outfit" rel="stylesheet" type="text/css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
-    <style>
-        body {
-            font-family: 'Outfit';
-            text-align: center;
-            background-color: hsl(212, 45%, 89%);
-        }
-
-        img {
-            width: 100%;
-            height: 90%;
-            border-radius: 10px;
-        }
-
-        .writeup {
-            font-size: 25px;
-            color: hsl(218, 44%, 22%);
-            font-weight: 700;
-        }
-
-        .scan {
-            font-size: 17px;
-            font-weight: 400;
-            color:hsl(220, 15%, 55%);
-        }
-
-        .container {
-            background-color: hsl(0, 0%, 100%);
-            width: 300px;
-            height: 300px;
-            padding: 20px 20px 180px 20px;
-            position: relative;
-            top: 50px;
-            left: 37%;
-            border-radius: 20px;
-
-        }
-    </style>
-</head>
-
-<body>
-    <div class="container">
-        <img src="https://d.top4top.io/p_2212ettif2.png" alt="qrimage">
-        <p class="writeup">
-                Improve your front-end skills by building projects
-        </p>
-        <p class="scan">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-        </p>
-    </div>
-</body>
-
-</html>
+<!DOCTYPE html> 
+ <html lang="en"> 
+  
+ <head> 
+     <link href="https://fonts.googleapis.com/css?family=Outfit" rel="stylesheet" type="text/css"> 
+     <meta charset="UTF-8"> 
+     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+     <title>Document</title> 
+  
+     <style> 
+         body {
+             font-family: 'Outfit'; 
+             text-align: center; 
+             background-color: hsl(212, 45%, 89%); 
+         } 
+  
+         img { 
+             width: 100%; 
+             height: 90%; 
+             border-radius: 10px; 
+         } 
+  
+         .writeup { 
+             font-size: 25px; 
+             color: hsl(218, 44%, 22%); 
+             font-weight: 700; 
+         } 
+  
+         .scan { 
+             font-size: 17px; 
+             font-weight: 400; 
+             color:hsl(220, 15%, 55%); 
+         }
+         
+       .container{
+           width: 300px;
+           height: 300px;
+           position :absolute ;
+           top: 50%;
+           left: 50%;
+           transform : translate(-50%, -50%);
+           background-color: hsl(0, 0%, 100%); 
+             padding: 20px 20px 180px 20px; 
+             border-radius: 20px;
+       }        
+     </style> 
+ </head> 
+  
+ <body> 
+     <div class="container"> 
+         <img src="https://d.top4top.io/p_2212ettif2.png" alt="qrimage"> 
+         <p class="writeup"> 
+                 Improve your front-end skills by building projects 
+         </p> 
+         <p class="scan">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level 
+         </p> 
+     </div> 
+ </body> 
+  
+ </html>
